add device info impl
